[package]
name = "search-engin"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = {version = "1.0.228", features = ["derive"]}
serde-xml-rs = "0.8.2"
serde-wasm-bindgen = "0.4"
js-sys = "0.3.95"
wasm-bindgen = "0.2.118"
wasm-bindgen-futures = "0.4.68"
web-sys = {version = "0.3.95", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "console",
    "EventTarget",
    "Event",
    "FetchEvent",
    "MouseEvent",
    "Response",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "Text",
    "Location",
    "Node"
]}
fuzzy-matcher = "0.3.7"
thiserror = "2.0.18"

